# CraftingCategories

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
data/Interface/Translations/: .editorconfig  CraftingCategories_ENGLISH.txt  CraftingCategories_FRENCH.txt
data/Interface/craftingcategories/: icons.swf
data/SKSE/Plugins/CraftingCategories/: Dawnguard.json  Dragonborn.json  HearthFires.json  Skyrim.json  Unofficial Skyrim Special Edition Patch.json  ccASVSSE001-ALMSIVI.json  ccBGSSSE025-AdvDSGS.json  ccBGSSSE055-BA_OrcishScaled.json
docs/: CraftingCategories.schema.json
scaleform/: version.as
scaleform/Common/skyui/components/list/: ButtonListEntry.as
scaleform/Common/skyui/filter/: ItemTypeFilter.as
scaleform/ConstructibleObjectMenu/: CraftingLists.as  CraftingMenu.as  constructibleobjectmenu.fla
scaleform/ConstructibleObjectMenu/skse/plugins/: CraftingCategories.as
src/Data/: CategoryManager.cpp  CategoryManager.h  ConfigLoader.cpp  ConfigLoader.h
src/Hooks/: Crafting.cpp  Crafting.h
src/PCH/: PCH.h
src/RE/: Offset.h
src/SKSEPlugin/: SKSEPlugin.cpp
src/Translation/: Translation.cpp  Translation.h
